--- a/webant-server/pom.xml
+++ b/webant-server/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>org.webant</groupId>
-        <artifactId>webant</artifactId>
+        <artifactId>webant-workbench</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
